# ai_character_backend

./: .gitignore  chat.py  compose.yml  config.py  db.py  main.py  model.py  pyproject.toml  rag.py  setup.cfg  voice2text.py  voicevox.py
